--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="fa"><head>
   <meta charset="UTF-8">
-  <title>CodePen - Responsive About us Section Using HTML &amp; CSS</title>
+  <title>باشگاه مجریان شرکت نونام پایپ</title>
 
     <link rel="shortcut icon" href="./logo.png"/>
     <link rel="icon" type="image/x-icon" href="./logo.png">
